# solo5-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs  x86_64-solrs.json
src/: .lib.rs.swp  lib.rs  memstub.rs
