[package]
name = "solo5"
version = "0.1.0"
authors = ["Nikita Nazarenko <savant.d@gmail.com>"]
publish = false

[features]
ukvm = []
virtio = []

[dependencies]
volatile = "0.1.0"
spin = "0.4"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins", features = ["mem"] }
